cabal-version:      2.4
name:               plutus-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      PubSale
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
    hs-source-dirs: src

test-suite plutus-example-projects-test
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: examples/test
  other-modules:
    Spec.Model
  build-depends:
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-starter -any
  build-depends:
    base >=4.9 && <5,
    tasty -any,
    tasty-hunit -any,
    tasty-hedgehog >=0.2.0.0

executable           script-dump
  main-is:           script-dump.hs
  hs-source-dirs:    exe, src
  other-modules:     PubSale
  build-depends:     base
                    , aeson
                    , cardano-api
                    , cardano-ledger-alonzo
                    , bytestring
                    , containers
                    , freer-extras
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , text
                    , serialise
                    , playground-common
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise